--- a/style.css
+++ b/style.css
@@ -6,18 +6,34 @@ body{
 main {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: start;
     background: linear-gradient(to bottom right, #5AB2FF, #A0DEFF);
     min-height: 100vh;
+    padding: 10px;
+    flex-direction: column;
     
+}
+header{
+    display: flex;
+    background: #A0DEFF;
+    padding: 0;
+    margin: 0;
+}
+nav{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    margin: 0 20px;
 }
 .login-container{
     width: 25%;
     height: 65%;
-    background: linear-gradient(to bottom right, #5AB2FF, #CAF4FF);
+    background: white;
     padding: 20px 10px;
     min-width: 55vh;
-    min-height: 65vh;
+    min-height: 80px;
 }
 .content-login{
     display: flex;
@@ -30,6 +46,9 @@ main {
     justify-content: center;
     text-align: center;
     margin: 10px 0;
+}
+.container{
+    display: flex;
 }
 .border{
     border: 2px solid white;
@@ -71,5 +90,31 @@ main {
 .input-1{
     border:1px solid #0f1111;
     border-radius: 5px;
-    height: 20px;
+    height: 25px;
+    width: 120px;
+    margin: 0 5px;
+}
+.input-2{
+    border:1px solid #0f1111;
+    border-radius: 5px;
+    height: 30px;
+    min-width: 50px;
+    max-width: 250px;
+    margin: 0 5px;
+}
+table{
+    background: white;
+    border: 1px solid black;
+    width: 100%;
+    border-collapse: collapse;
+}
+td{
+    padding: 10px 30px;
+    text-align: left;
+    border-bottom: 1px solid #6d6d6d;
+}
+th{
+    padding: 10px 30px;
+    text-align: center;
+    border-bottom: 1px solid #6d6d6d;
 }
